--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ github_username:  jekyll
 GoogleAnalytics: UA-xxxxxx-x
 
 twitter:
-  username: @hemmyshen
+  username: hemmyshen
 facebook:
   app_id: 1234567
   publisher: 1234567
