--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ title: 逐流的喫茶方舟
 email: hemmyshen@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   咸鱼逐流的自白.
-baseurl: "" # the subpath of your site, e.g. /newpath-for-emping
+baseurl: "zhuliuabi.com" # the subpath of your site, e.g. /newpath-for-emping
 url: "zhuliuabi.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: hemmyshen
+github_username:  ZhuliuAiagle
 GoogleAnalytics: UA-xxxxxx-x
 
 twitter:
