--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: hemmyshen@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   咸鱼逐流的自白.
 baseurl: "zhuliuabi.com" # the subpath of your site, e.g. /newpath-for-emping
-url: "zhuliuabi.com" # the base hostname & protocol for your site
+url: "example.com" # the base hostname & protocol for your site
 twitter_username: hemmyshen
 github_username:  ZhuliuAiagle
 GoogleAnalytics: UA-xxxxxx-x
