--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: 逐流的喫茶方舟
-email: hemmyshen@gmail.com
+title: Emping
+email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  咸鱼逐流的自白.
-baseurl: "zhuliuabi.com" # the subpath of your site, e.g. /newpath-for-emping
-url: "example.com" # the base hostname & protocol for your site
-twitter_username: hemmyshen
-github_username:  ZhuliuAiagle
+  Let's Eat!!.
+baseurl: "" # the subpath of your site, e.g. /newpath-for-emping
+url: "http://example.com" # the base hostname & protocol for your site
+twitter_username: jekyllrb
+github_username:  jekyll
 GoogleAnalytics: UA-xxxxxx-x
 
 twitter:
-  username: hemmyshen
+  username: rmsubekti
 facebook:
   app_id: 1234567
   publisher: 1234567
