--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
 title: 逐流的喫茶方舟
-email: your-email@domain.com
+email: danielshen@yahoo.com
 description: > # this means to ignore newlines until "baseurl:"
   咸鱼逐流的自白.
 baseurl: "http://zhuliuabi.com" # the subpath of your site, e.g. /newpath-for-emping
 url: "http://zhuliuabi.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: hemmyshen
+github_username:  ZhuliuAiagle
 GoogleAnalytics: UA-xxxxxx-x
 
 twitter:
-  username: rmsubekti
+  username: hemmyshen
 facebook:
   app_id: 1234567
   publisher: 1234567
