--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 逐流的喫茶方舟
 email: danielshen@yahoo.com
 description: > # this means to ignore newlines until "baseurl:"
-  咸鱼逐流的自白.
+  百鸟可知悲哀.
 baseurl: "http://zhuliuabi.com" # the subpath of your site, e.g. /newpath-for-emping
 url: "http://zhuliuabi.com" # the base hostname & protocol for your site
 twitter_username: hemmyshen
