--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: 计算机学院学生权益服务项目
-email: danielshen@yahoo.com
+title: 逐流的喫茶店
+email: zijinshen@zju.edu.cn
 description: > # this means to ignore newlines until "baseurl:"
-  想留言可以戳下面喵~.
+  一条咸鱼的自白.
 baseurl: "http://zhuliuabi.com" # the subpath of your site, e.g. /newpath-for-emping
 url: "http://zhuliuabi.com" # the base hostname & protocol for your site
 twitter_username: hemmyshen
