--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 我永远单推凑阿夸
+title: 我永远单推凑あくあ
 email: zijinshen@zju.edu.cn
 description: > # this means to ignore newlines until "baseurl:"
   一条咸鱼的自白.
